--- a/src/components/Inputs/input.scss
+++ b/src/components/Inputs/input.scss
@@ -1,4 +1,5 @@
 @import "../../saas/variables.scss";
+@import "../../saas/media.scss";
 
 
 .input {
@@ -9,8 +10,12 @@
   font-size: $font-size-m;
   font-weight: $font-weight;
   max-width: 10rem;
-  padding: $padding-inputs;
+  padding: $padding-s;
   width: 100%;
+  
+  @include media-query-mobile {
+    max-width: 100%;
+}
 
   &:hover {
     border-color: $color-input-hover;
