--- a/src/components/Schedule/schedule.scss
+++ b/src/components/Schedule/schedule.scss
@@ -1,4 +1,5 @@
 @import "../../saas/variables.scss";
+@import "../../saas/media.scss";
 
 
 .schedule-container {
@@ -9,6 +10,10 @@
 
 .schedule {
     width: 60%;
+
+    @include media-query-mobile {
+        width: 100%;
+    }
 
     &__buttons {
         margin-bottom: $margin-m;
